syntax = "proto3";

package memos.store;

option go_package = "gen/store";

enum WorkspaceSettingKey {
  WORKSPACE_SETTING_KEY_UNSPECIFIED = 0;
  // BASIC is the key for basic settings.
  BASIC = 1;
  // GENERAL is the key for general settings.
  GENERAL = 2;
  // STORAGE is the key for storage settings.
  STORAGE = 3;
  // MEMO_RELATED is the key for memo related settings.
  MEMO_RELATED = 4;
  // AI is the key for AI agent settings.
  AI = 5;
}

message WorkspaceSetting {
  WorkspaceSettingKey key = 1;
  oneof value {
    WorkspaceBasicSetting basic_setting = 2;
    WorkspaceGeneralSetting general_setting = 3;
    WorkspaceStorageSetting storage_setting = 4;
    WorkspaceMemoRelatedSetting memo_related_setting = 5;
    WorkspaceAISetting ai_setting = 6;
  }
}

message WorkspaceBasicSetting {
  // The secret key for workspace. Mainly used for session management.
  string secret_key = 1;
  // The current schema version of database.
  string schema_version = 2;
}

message WorkspaceGeneralSetting {
  // theme is the name of the selected theme.
  // This references a CSS file in the web/public/themes/ directory.
  string theme = 1;
  // disallow_user_registration disallows user registration.
  bool disallow_user_registration = 2;
  // disallow_password_auth disallows password authentication.
  bool disallow_password_auth = 3;
  // additional_script is the additional script.
  string additional_script = 4;
  // additional_style is the additional style.
  string additional_style = 5;
  // custom_profile is the custom profile.
  WorkspaceCustomProfile custom_profile = 6;
  // week_start_day_offset is the week start day offset from Sunday.
  // 0: Sunday, 1: Monday, 2: Tuesday, 3: Wednesday, 4: Thursday, 5: Friday, 6: Saturday
  // Default is Sunday.
  int32 week_start_day_offset = 7;
  // disallow_change_username disallows changing username.
  bool disallow_change_username = 8;
  // disallow_change_nickname disallows changing nickname.
  bool disallow_change_nickname = 9;
}

message WorkspaceCustomProfile {
  string title = 1;
  string description = 2;
  string logo_url = 3;
  string locale = 4;
}

message WorkspaceStorageSetting {
  enum StorageType {
    STORAGE_TYPE_UNSPECIFIED = 0;
    // STORAGE_TYPE_DATABASE is the database storage type.
    DATABASE = 1;
    // STORAGE_TYPE_LOCAL is the local storage type.
    LOCAL = 2;
    // STORAGE_TYPE_S3 is the S3 storage type.
    S3 = 3;
    // STORAGE_TYPE_ALIYUN_OSS is the Aliyun OSS storage type.
    ALIYUN_OSS = 4;
  }
  // storage_type is the storage type.
  StorageType storage_type = 1;
  // The template of file path.
  // e.g. assets/{timestamp}_{filename}
  string filepath_template = 2;
  // The max upload size in megabytes.
  int64 upload_size_limit_mb = 3;
  // The S3 config.
  StorageS3Config s3_config = 4;
  // The Aliyun OSS config.
  StorageOSSConfig oss_config = 7;
}

// Reference: https://developers.cloudflare.com/r2/examples/aws/aws-sdk-go/
message StorageS3Config {
  string access_key_id = 1;
  string access_key_secret = 2;
  string endpoint = 3;
  string region = 4;
  string bucket = 5;
  bool use_path_style = 6;
}

// StorageOSSConfig is the configuration for Aliyun OSS storage.
message StorageOSSConfig {
  // endpoint is the OSS endpoint (e.g., oss-cn-hangzhou.aliyuncs.com)
  string endpoint = 1;
  // region is the OSS region (e.g., cn-hangzhou)
  string region = 2;
  // access_key_id is the OSS access key ID
  string access_key_id = 3;
  // access_key_secret is the OSS access key secret
  string access_key_secret = 4;
  // bucket is the OSS bucket name
  string bucket = 5;
  // use_ssl indicates whether to use HTTPS (default: true)
  bool use_ssl = 6;
  // use_custom_domain indicates whether to use a custom domain
  bool use_custom_domain = 7;
  // custom_domain is the custom domain URL
  string custom_domain = 8;
}

message WorkspaceMemoRelatedSetting {
  // disallow_public_visibility disallows set memo as public visibility.
  bool disallow_public_visibility = 1;
  // display_with_update_time orders and displays memo with update time.
  bool display_with_update_time = 2;
  // content_length_limit is the limit of content length. Unit is byte.
  int32 content_length_limit = 3;
  // enable_double_click_edit enables editing on double click.
  bool enable_double_click_edit = 4;
  // enable_link_preview enables links preview.
  bool enable_link_preview = 5;
  // reactions is the list of reactions.
  repeated string reactions = 7;
  // disable markdown shortcuts
  bool disable_markdown_shortcuts = 8;
  // enable_blur_nsfw_content enables blurring of content marked as not safe for work (NSFW).
  bool enable_blur_nsfw_content = 9;
  // nsfw_tags is the list of tags that mark content as NSFW for blurring.
  repeated string nsfw_tags = 10;
}

// WorkspaceAISetting is the configuration for AI agent.
message WorkspaceAISetting {
  // api_key is the Bailian API Key
  string api_key = 1;
  // endpoint is the API endpoint (default: https://dashscope.aliyuncs.com/api/v1)
  string endpoint = 2;
  // temperature is the default temperature (0.0-2.0)
  double temperature = 3;
  // max_tokens is the default max tokens per response
  int32 max_tokens = 4;
  // enabled indicates whether AI feature is enabled
  bool enabled = 5;
  // agents is the list of available AI agents
  repeated AIAgent agents = 6;
  // default_agent_id is the default agent ID to use
  string default_agent_id = 7;
}

// AIAgent represents a single AI agent configuration
message AIAgent {
  // id is the unique identifier (agent_id from Bailian)
  string id = 1;
  // name is the display name of the agent
  string name = 2;
  // description is the description/note about the agent
  string description = 3;
  // created_ts is the creation timestamp
  int64 created_ts = 4;
}
